@@ -17,6 +17,9 @@ Bug reports, feature suggestions and latest developments:
 -- INSTALLATION --
 
 * Install as usual, see http://drupal.org/node/70151 for further information.
+  Note that installing external libraries is separate from installing this
+  module and should happen in the sites/all/libraries directory. See
+  http://drupal.org/node/1440066 for more information.
 
 
 -- CONTACT --
