@@ -3,9 +3,9 @@
 name = Example info file
 
 
-; Information added by drupal.org packaging script on 2011-12-15
-version = "7.x-2.0-alpha2"
+; Information added by drupal.org packaging script on 2012-07-29
+version = "7.x-2.0"
 core = "7.x"
 project = "libraries"
-datestamp = "1323950504"
+datestamp = "1343561873"
 
