@@ -1,6 +1,10 @@
 
-Libraries 7.x-2.x, xxxx-xx-xx
+Libraries 7.x-2.0, 2012-07-29
 -----------------------------
+#1606018 by chemical: Tests fail if the module is downloaded from Drupal.org.
+#1386250 by tstoeckler: Clarify module and library installation in README.txt.
+#1578618 by iamEAP: Fixed Fatal cache flush failure on major version upgrades.
+#1449346 by tstoeckler, sun: Clean-up libraries.test
 
 
 Libraries 7.x-2.0-alpha2, 2011-12-15
@@ -13,7 +17,7 @@ Libraries 7.x-2.0-alpha2, 2011-12-15
 #1205854 by tstoeckler, sun: Test library caching.
 
 
-Libraries 7.x-2.0-ALPHA1, 2011-10-01
+Libraries 7.x-2.0-alpha1, 2011-10-01
 ------------------------------------
 #1268342 by tstoeckler: Clean up drush libraries-list command.
 #962214 by tstoeckler, sun: Add support for library dependencies.
